--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "pdfjs-dist": "3.0.279"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.0",
